<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/signsv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/banner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/gromart"

                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:textColor="@color/green"
                app:layout_constraintVertical_bias="0"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/slogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:text="@string/shop_to_your_heart_s_content"
                android:textAlignment="center"
                android:textColor="@color/purple_700"
                android:textSize="15sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:id="@+id/tv_signup"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:textSize="22sp"
                android:textColor="@color/dark_gray"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_fname"
                android:text="@string/first_name"
                android:textColor="@color/dgreen"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp" />


            <EditText
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:ems="10"
                android:inputType="text"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_fname"
                app:layout_constraintHorizontal_bias="0.017"
                app:layout_constraintStart_toStartOf="@+id/tv_fname"
                app:layout_constraintTop_toBottomOf="@+id/banner"
                app:layout_constraintVertical_bias="0.2"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tv_lname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textColor="@color/dgreen"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginLeft="20dp" />


            <EditText
                android:id="@+id/lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:ems="10"
                android:inputType="text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/e_mail"
                android:textColor="@color/dgreen"
                android:textSize="14sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginTop="315dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textSize="17sp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_mail"
                app:layout_constraintStart_toStartOf="@+id/tv_mail"
                app:layout_constraintTop_toBottomOf="@+id/tv_mail" />

            <TextView
                android:id="@+id/tv_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/dgreen"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"/>


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_cpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/re_enter_password"
                android:textColor="@color/dgreen"
                android:layout_marginLeft="20dp"
                android:textSize="14sp"
                android:textStyle="bold"
                />


            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="13dp"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="17sp" />

            <Button
                android:id="@+id/signUp"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/green"
                android:checkable="false"
                android:selectAllOnFocus="false"
                android:layout_gravity="center"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
                app:layout_constraintVertical_bias="0" />


            <!--Bottom  continue text part -->

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtlogin"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:fontFamily="sans-serif-black"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:text="@string/have_an_account"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/btnTxtLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/sign_in"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="3dp"
                    android:textColor="@color/dgreen"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>






</androidx.constraintlayout.widget.ConstraintLayout>