<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ScrollView
        android:id="@+id/svlog"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/logll"
            android:orientation="vertical">

            <TextView
                android:id="@+id/banner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"

                android:fontFamily="sans-serif-black"
                android:text="@string/gromart"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/slogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/shop_to_your_heart_s_content"
                android:textAlignment="center"
                android:textColor="@color/purple_700"
                android:textSize="15sp"
                android:textStyle="italic"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:layout_gravity="center"
                android:id="@+id/tv_signup"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="50dp"
                android:textSize="22sp"
                android:textColor="@color/dark_gray"
                android:textStyle="bold"/>


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Email Address"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:hint="Password"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/btnlogin"
                android:backgroundTint="@color/green"
                android:text="Login"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginTop="55dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"/>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_700"
                android:layout_marginTop="35dp"
                android:text="Forgot Password"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signUp"
                android:layout_marginTop="35dp"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dgreen"
                android:text="Sign up"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>


            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                tools:ignore="MissingConstraints"
                android:layout_gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>


        </LinearLayout>


    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>